Updated included Cocoon to 2.1m2. Cleaned up some packages. XUpdate: it is now possible to update/rename the root element of the document.
svn path=/trunk/eXist-1.0/; revision=84


Former-commit-id: 0860a1ba88e3a112f557ad6876f792acc09f2406